--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
               "devServerTarget": "edge-comp-lib-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
